--- a/style.css
+++ b/style.css
@@ -387,3 +387,14 @@ main div.adoptar h1{
     justify-content: center;
     align-items: center;
 }
+
+
+
+.tarjeta2 {
+    float: left;
+    border: 2px solid blue;
+    margin:5px; padding: 3px;
+    width:300px;
+    height:500px;
+    overflow: hidden;
+}
